Minor changes and some localization

--- a/src/Presentation/SmartStore.Web/ErrorPage.htm
+++ b/src/Presentation/SmartStore.Web/ErrorPage.htm
@@ -28,7 +28,7 @@
     <div class="page">
 
         <h1>
-            We're sorry, an internal error occurred.
+            We're sorry, an internal error has occurred.
         </h1>
         <p>
             Our supporting staff has been notified of this error and will address the issue shortly.
