Added image upload support to Summernote editor

--- a/src/Presentation/SmartStore.Web/Content/editors/tinymce4/plugins/jbimages/dialog-v4.htm
+++ b/src/Presentation/SmartStore.Web/Content/editors/tinymce4/plugins/jbimages/dialog-v4.htm
@@ -8,7 +8,7 @@
 </head>
     <body>
         <!--codehint: sm-edit-->
-        <form class="form-inline" id="upl" name="upl" action="../../../../../admin/jbimages/upload/" method="post" enctype="multipart/form-data" target="upload_target" onsubmit="jbImagesDialog.inProgress();">
+        <form class="form-inline" id="upl" name="upl" action="../../../../../Admin/Media/UploadImage/" method="post" enctype="multipart/form-data" target="upload_target" onsubmit="jbImagesDialog.inProgress();">
 
             <div id="upload_in_progress" class="upload_infobar"><img src="img/spinner.gif" width="16" height="16" class="spinner">Upload in progress&hellip; <div id="upload_additional_info"></div></div>
             <div id="upload_infobar" class="upload_infobar"></div>
